human-intervention-logs/io.rest-assured:rest-assured:5.5.0/gradle-test/gradle-test-2026-05-11T09-50-19-070313Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.rest-assured:rest-assured:5.5.0
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 30 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :generateDirectAccessClass

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/tests/src/io.rest-assured/rest-assured/5.5.0/src/test/java/io/restassured/internal/RestAssuredResponseOptionsGroovyImplAnonymous1Access.java:24: error: cannot find symbol
                RestAssuredResponseOptionsGroovyImpl$1.class,
                ^
  symbol:   class RestAssuredResponseOptionsGroovyImpl$1
  location: class RestAssuredResponseOptionsGroovyImplAnonymous1Access
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/tests/src/io.rest-assured/rest-assured/5.5.0/src/test/java/io_rest_assured/rest_assured/RequestSpecificationImplInner_getPathParams_closure40Test.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error


[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/tests/src/io.rest-assured/rest-assured/5.5.0/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/tests/src/io.rest-assured/rest-assured/5.5.0/src/test/java/io_rest_assured/rest_assured/RequestSpecificationImplInner_getPathParams_closure40Test.java uses unchecked or unsafe operations.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/tests/src/io.rest-assured/rest-assured/5.5.0/src/test/java/io/restassured/internal/RestAssuredResponseOptionsGroovyImplAnonymous1Access.java:24: error: cannot find symbol
                  RestAssuredResponseOptionsGroovyImpl$1.class,
                  ^
    symbol:   class RestAssuredResponseOptionsGroovyImpl$1
    location: class RestAssuredResponseOptionsGroovyImplAnonymous1Access
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 2 executed, 10 up-to-date

BUILD FAILED in 5s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2624-112a1ae4/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.rest-assured:rest-assured:5.5.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
